--- a/stockXchange/startbootstrap-business-frontpage-gh-pages/index.html
+++ b/stockXchange/startbootstrap-business-frontpage-gh-pages/index.html
@@ -10,41 +10,9 @@
 
   <title>Stock Exchange</title>
 
-  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script type="text/javascript">
-      google.charts.load('current', {'packages':['bar']});
-      google.charts.setOnLoadCallback(drawStuff);
-
-      function drawStuff() {
-        var data = new google.visualization.arrayToDataTable([
-          ['Move', 'Percentage'],
-          ["King's pawn (e4)", 44],
-          ["Queen's pawn (d4)", 31],
-          ["Knight to King 3 (Nf3)", 12],
-          ["Queen's bishop pawn (c4)", 10],
-          ['Other', 3]
-        ]);
-
-        var options = {
-          width: 800,
-          legend: { position: 'none' },
-          chart: {
-            title: 'Chess opening moves',
-            subtitle: 'popularity by percentage' },
-          axes: {
-            x: {
-              0: { side: 'top', label: 'White to move'} // Top x-axis.
-            }
-          },
-          bar: { groupWidth: "90%" }
-        };
-
-        var chart = new google.charts.Bar(document.getElementById('top_x_div'));
-        // Convert the Classic options to Material options.
-        chart.draw(data, google.charts.Bar.convertOptions(options));
-      };
-    </script>
-
+  <!--ChartJs -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+  
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -67,7 +35,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home
+            <a class="nav-link" href="index.html">Home
               <span class="sr-only">(current)</span>
             </a>
           </li>
@@ -105,11 +73,11 @@
 
     <div class="row">
       <div class="col-md-8 mb-5">
-        <h2>Company Decsription</h2>
+        <h2>Alphabet Inc.(GOOG)</h2>
         <hr>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A deserunt neque tempore recusandae animi soluta quasi? Asperiores rem dolore eaque vel, porro, soluta unde debitis aliquam laboriosam. Repellat explicabo, maiores!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis optio neque consectetur consequatur magni in nisi, natus beatae quidem quam odit commodi ducimus totam eum, alias, adipisci nesciunt voluptate. Voluptatum.</p>
-        <a class="btn btn-primary btn-lg" href="#">Stock Performance &raquo;</a>
+        <p>Google announced a 2-for-1 stock split way back in 2012, and it finally took effect in early 2014. The result: GOOG was joined by GOOGL, each representing different classes of Google stock.</p>
+        <p>GOOGL stock allowed for voting rights, GOOG stock did not.</p>
+        <a class="btn btn-primary btn-lg" href="companyDescription.html">read more &raquo;</a>
       </div>
       <div class="col-md-4 mb-5">
         <h2>Forex</h2>
@@ -129,21 +97,21 @@
         </address>
       </div>
     </div>
-    <!-- /.row -->
-	
-  <div id="top_x_div" style="width: 800px; height: 600px;"></div>
     
-    <!-- /.row -->
 
   </div>
   <!-- /.container -->
-
+  <div class="chart-layout"> 
+   		<canvas id="chart" height="15" width="35"></canvas>
+  </div>
+  <script src="js/main.js"></script>
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
       <p class="m-0 text-center text-white">Copyright &copy; Polina & Karma 2020</p>
     </div>
     <!-- /.container -->
+
   </footer>
 
   <!-- Bootstrap core JavaScript -->
