--- a/stockXchange/startbootstrap-business-frontpage-gh-pages/index.html
+++ b/stockXchange/startbootstrap-business-frontpage-gh-pages/index.html
@@ -84,7 +84,7 @@
         <hr>
         <address>
           <strong></strong>
-          <br>3481 Melrose Place
+          <br>to be changed
           <br>Beverly Hills, CA 90210
           <br>
         </address>
